@@ -22,6 +22,7 @@ the documentation.
   * tools.!AxisScaleTool/bugfix: when updating its status, the tool was setting the axes scales even when not necessary, hence causing an autoscale since changeset 1159 (687e22074f8d)
   * !ItemCenterTool was not working as expected when centering annotated shapes having a specific transform matrix
   * !XYImageItem objects: re-added cross-section support (removed accidently)
+  * Curve autoscale method (curve.!CurvePlot/!ErrorBarCurvePlot) now handles non-finite values (NaNs and infs)
 
 === Possible API compatibility issues (since v2.1.3) ===
 
